Added confirmation dialog to the removing of invalid media records